# sonar

./: .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.html  TODO.md  docker-compose.yml
.github/: CODEOWNERS  (+4 more)
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  rate_limit.py
backend/scripts/: backfill_fit_scores.py  backfill_signals_from_keywords.py  calibrate_matching.py
backend/tests/: conftest.py  test_alerts_router.py  test_apify_service.py  test_apify_url_canonicalization.py  test_auth.py  test_backfill_email.py  test_backfill_fit_scores.py  test_backfill_router.py  test_backfill_signals_script.py  test_calibrate_hybrid.py  test_company_signal_summary_model.py  test_confirm_endpoint.py  test_context_generator.py  test_context_generator_themes.py  test_dashboard_endpoint.py  test_dashboard_flow.py  test_dashboard_schemas.py  test_day_one_backfill.py  test_delivery_formatters_nullable_relationship.py  test_delivery_router.py  test_e2e.py  test_extract_icp_prompt.py  test_feedback_trainer.py  test_fit_scorer.py  test_incremental_trending.py  test_ingest_router.py  test_keyword_filter.py  test_llm_model_constant.py  test_matcher.py  test_migration_008_009_010.py  test_person_signal_summary_model.py  test_pipeline_dashboard_hook.py  test_pipeline_hybrid_scoring.py  test_pipeline_phase2.py  test_post_model_phase2.py  test_profile_extract_icp.py  test_profile_extractor.py  test_profile_update_icp.py  (+15 more)
(+151 files in other folders)
