[project]
name = "sonar-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.44.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.18.4",
    "pgvector>=0.4.0,<0.5",
    "openai>=2.32.0",
    "groq>=0.9.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.13.1",
    "email-validator>=2.3.0",
    "resend>=2.5.0",
    "twilio>=9.10.5",
    "python-telegram-bot>=22.7",
    "numpy>=2.0.0,<3",
    "beautifulsoup4>=4.12.0",
    "pyjwt>=2.12.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "python-multipart>=0.0.26",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
